# sm-internship

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  diabetes_task.ipynb  hello.py  main.py  pyproject.toml  requirements.txt  test_main.py
.devcontainer/: devcontainer.json
.qodo/: history.sqlite
mlartifacts/432499792877561849/78e8b2ea4b664bf68041da96ed42fc19/artifacts/model/: MLmodel  conda.yaml  input_example.json  model.cb  python_env.yaml  requirements.txt  serving_input_example.json
tests/: __init__.py  test_main.py
