[project]
name = "sm-internship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "sentencepiece>=0.2.0",
    "transformers>=4.49.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "pre-commit>=4.1.0",
    "pytest-cov>=6.0.0",
]
