[project]
name = "sm-internship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "matplotlib>=3.10.0",
    "mlflow>=2.20.3",
    "numpy<2",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "shap>=0.46.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "pre-commit>=4.1.0",
    "pytest-cov>=6.0.0",
]
